# layer-bot

./: .env.example  .gitignore  BRIDGE_MIGRATION_SUMMARY.md  DISCORD_ALERTS_USAGE.md  ENV_CONFIGURATION.md  PROCESSING_TIME_TRACKING.md  README.md  WITHDRAWALS_FIX.md  app.py  bridge_deposits.csv.backup  bridge_deposits.csv.backup_20251001_102733  bridge_deposits_txs.csv  bridge_info.py  check_contract_exists.py  debug_withdraw_claimed.py  layertest_3_deposits.csv  list_keys.py  migrate_add_claimed_timestamp.py  pyproject.toml  query_layer.py  requirements.txt  run_block_time_tracker.sh  scan_time.json  test_block_time.py  test_claimed.py  test_csv_update.py  verify_migration.py  verify_processing_time_tracking.py
contracts/: TokenBridge.sol
encoding/: encoding.py  no-stake-report.py
src/layerbot/: bridge_info.py  cli.py  create_accounts.py  query_layer copy.py  query_layer.py
src/layerbot/commands/: add_public_addrs.py  auto-tipper.py  bridge_request.py  bridge_scan.py  claim_deposits.py  estimate_block_time.py  manage_block_data.py  propose_dispute.py  report_test_value.py  send_to_requesters.py  test.py  tip_deposits.py  tip_withdrawals.py  track_block_time.py  tx.py  withdraw_tokens.py
src/layerbot/utils/: BLOCK_TIME_README.md  block_time.py  discord_alerts.py  get_timestamp_from_height.py  query_bridge_reports.py  query_layer.py  query_withdrawal_txs.py  scan_time.py
static/: example_style.css
templates/: deposits.html
